pushing html ajax

--- a/Tables.html
+++ b/Tables.html
@@ -1,77 +1,202 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head> 
-<meta charset="UTF-8">
-<title>Tables Page</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://code.jquery.com/jquery.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</head>
-<div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Tables Page</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="text-center">
+          <span class="fa fa-fire"></span> Dat Hotness Restaurant
+        </h1>
+        <hr />
+        <h2 class="text-center">Current Reservations and Waiting List</h2>
+        <br />
 
-    <div class="jumbotron">
-      <h1 class="text-center"><span class="fa fa-fire"></span> Dat Hotness Restaurant</h1>
-      <hr>
-      <h2 class="text-center">Current Reservations and Waiting List</h2>
-      <br>
-
-      <div class="text-center">
-        <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
-        <a href="/"><button class="btn btn-lg btn-default"><span class="fa fa-home"></span></button></a>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-12">
-
-        <!-- Current Tables in Use -->
-        <div class="card">
-          <div class="card-header">
-            <h4>Current Reservations</h4>
-          </div>
-          <div class="card-body">
-            <ul id="tableList" class="list-group"><li class="list-group-item mt-4"><h2>Table #1</h2><hr><h2>ID: 12123</h2><h2>Name: mickey</h2><h2>Email: mickey@gmail.com</h2><h2>Phone: 12121</h2></li></ul>
-          </div>
-
-          <div class="card-body">
-            <ul id="tableList" class="list-group"><li class="list-group-item mt-4"><h2>Table #2</h2><hr><h2>ID: 12124</h2><h2>Name: donald</h2><h2>Email: donald@gmail.com</h2><h2>Phone: 42121</h2></li></ul>
-          </div>
-
-          <div class="card-body">
-            <ul id="tableList" class="list-group"><li class="list-group-item mt-4"><h2>Table #3</h2><hr><h2>ID: 12125</h2><h2>Name: goofy</h2><h2>Email: goofy@gmail.com</h2><h2>Phone: 52121</h2></li></ul>
-          </div>
-
-          <div class="card-body">
-            <ul id="tableList" class="list-group"><li class="list-group-item mt-4"><h2>Table #4</h2><hr><h2>ID: 12126</h2><h2>Name: pluto</h2><h2>Email: pluto@gmail.com</h2><h2>Phone: 62121</h2></li></ul>
-          </div>
-
-          <div class="card-body">
-            <ul id="tableList" class="list-group"><li class="list-group-item mt-4"><h2>Table #5</h2><hr><h2>ID: 12127</h2><h2>Name: minnie</h2><h2>Email: minnie@gmail.com</h2><h2>Phone: 72121</h2></li></ul>
-          </div>
-
-
-        </div>
-
-        <!-- Waiting List Card -->
-        <div class="card mt-4">
-          <div class="card-header">
-            <h4>Waiting List</h4>
-          </div>
-          <div class="card-body">
-            <ul id="waitList" class="list-group"></ul>
-          </div>
+        <div class="text-center">
+          <a href="/reserve"
+            ><button class="btn btn-lg btn-danger">
+              <span class="fa fa-credit-card"></span> Make Reservation
+            </button></a
+          >
+          <a href="/"
+            ><button class="btn btn-lg btn-default">
+              <span class="fa fa-home"></span></button
+          ></a>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-lg-12">
+          <!-- Current Tables in Use -->
+          <div class="card">
+            <div class="card-header"><h4>Current Reservations</h4></div>
+            <div class="card-body">
+              <ul id="tableList" class="list-group">
+                <li class="list-group-item mt-4">
+                  <h2>Table #1</h2>
+                  <hr />
+                  <h2>ID: 12123</h2>
+                  <h2>Name: mickey</h2>
+                  <h2>Email: mickey@gmail.com</h2>
+                  <h2>Phone: 12121</h2>
+                </li>
+              </ul>
+            </div>
+
+            <div class="card-body">
+              <ul id="tableList" class="list-group">
+                <li class="list-group-item mt-4">
+                  <h2>Table #2</h2>
+                  <hr />
+                  <h2>ID: 12124</h2>
+                  <h2>Name: donald</h2>
+                  <h2>Email: donald@gmail.com</h2>
+                  <h2>Phone: 42121</h2>
+                </li>
+              </ul>
+            </div>
+
+            <div class="card-body">
+              <ul id="tableList" class="list-group">
+                <li class="list-group-item mt-4">
+                  <h2>Table #3</h2>
+                  <hr />
+                  <h2>ID: 12125</h2>
+                  <h2>Name: goofy</h2>
+                  <h2>Email: goofy@gmail.com</h2>
+                  <h2>Phone: 52121</h2>
+                </li>
+              </ul>
+            </div>
+
+            <div class="card-body">
+              <ul id="tableList" class="list-group">
+                <li class="list-group-item mt-4">
+                  <h2>Table #4</h2>
+                  <hr />
+                  <h2>ID: 12126</h2>
+                  <h2>Name: pluto</h2>
+                  <h2>Email: pluto@gmail.com</h2>
+                  <h2>Phone: 62121</h2>
+                </li>
+              </ul>
+            </div>
+
+            <div class="card-body">
+              <ul id="tableList" class="list-group">
+                <li class="list-group-item mt-4">
+                  <h2>Table #5</h2>
+                  <hr />
+                  <h2>ID: 12127</h2>
+                  <h2>Name: minnie</h2>
+                  <h2>Email: minnie@gmail.com</h2>
+                  <h2>Phone: 72121</h2>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Waiting List Card -->
+          <div class="card mt-4">
+            <div class="card-header"><h4>Waiting List</h4></div>
+            <div class="card-body">
+              <ul id="waitList" class="list-group"></ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <footer class="footer mt-4">
+        <div class="container">
+          <p>Control Panel</p>
+          <p>
+            <a href="#" id="clear">Clear Table</a> |
+            <a href="/api/tables">API Table Link</a> |
+            <a href="/api/waitlist">API Wait List</a>
+          </p>
+        </div>
+      </footer>
     </div>
+    <script type="text/javascript">
+      function runTableQuery() {
+        $.ajax({ url: "/api/tables", method: "GET" }).then(function(tableData) {
+          console.log(tableData);
+          console.log("------------------------------------");
 
+          for (var i = 0; i < tableData.length; i++) {
+            var tableList = $("#tableList");
 
-    <footer class="footer mt-4">
-      <div class="container">
-        <p>Control Panel</p>
-        <p><a href="#" id="clear">Clear Table</a> | <a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API
-            Wait List</a>
-      </p></div>
-    </footer>
-    
+            var listItem = $("<li class='list-group-item mt-4'>");
+
+            listItem.append(
+              $("<h2>").text("Table #" + (i + 1)),
+              $("<hr>"),
+              $("<h2>").text("ID: " + tableData[i].customerID),
+              $("<h2>").text("Name: " + tableData[i].customerName),
+              $("<h2>").text("Email: " + tableData[i].customerEmail),
+              $("<h2>").text("Phone: " + tableData[i].phoneNumber)
+            );
+
+            tableList.append(listItem);
+          }
+        });
+      }
+
+      function runWaitListQuery() {
+        $.ajax({ url: "/api/waitlist", method: "GET" }).then(function(
+          waitData
+        ) {
+          console.log(waitData);
+          console.log("------------------------------------");
+
+          for (var i = 0; i < waitData.length; i++) {
+            var waitList = $("#waitList");
+
+            var listItem = $("<li class='list-group-item mt-4'>");
+
+            listItem.append(
+              $("<h2>").text("Table #" + (i + 1)),
+              $("<hr>"),
+              $("<h2>").text("ID: " + waitData[i].customerID),
+              $("<h2>").text("Name: " + waitData[i].customerName),
+              $("<h2>").text("Email: " + waitData[i].customerEmail),
+              $("<h2>").text("Phone: " + waitData[i].phoneNumber)
+            );
+
+            waitList.append(listItem);
+          }
+        });
+      }
+
+      function clearTable() {
+        alert("Clearing...");
+
+        $.ajax({ url: "/api/clear", method: "POST" }).then(function() {
+          $("#waitList").empty();
+          $("#tableList").empty();
+        });
+      }
+
+      $("#clear").on("click", clearTable);
+
+      runTableQuery();
+      runWaitListQuery();
+    </script>
+  </body>
+</html>
