waiting list dummy data

--- a/Tables.html
+++ b/Tables.html
@@ -114,7 +114,57 @@
 
           <!-- Waiting List Card -->
           <div class="card mt-4">
-            <div class="card-header"><h4>Waiting List</h4></div>
+            <div class="card-header">
+              <h4>Waiting List</h4>
+
+              <div class="card-body">
+                <ul id="tableList" class="list-group">
+                  <li class="list-group-item mt-4">
+                    <h2>Table #1</h2>
+                    <h2>ID: 12126</h2>
+                    <h2>Name: pluto</h2>
+                    <h2>Email: pluto@gmail.com</h2>
+                    <h2>Phone: 62121</h2>
+                  </li>
+                </ul>
+                <div class="text-center">
+                  <a href="/tables"
+                    ><button class="btn btn-lg ">
+                      <span class="fa fa-list-alt"></span> Send Mail
+                    </button></a
+                  >
+                  <a href="/tables"
+                    ><button class="btn btn-lg ">
+                      <span class="fa fa-list-alt"></span> Send Text Message
+                    </button></a
+                  >
+                </div>
+              </div>
+
+              <div class="card-body">
+                <ul id="tableList" class="list-group">
+                  <li class="list-group-item mt-4">
+                    <h2>Table #2</h2>
+                    <h2>ID: 12127</h2>
+                    <h2>Name: minnie</h2>
+                    <h2>Email: minnie@gmail.com</h2>
+                    <h2>Phone: 72121</h2>
+                  </li>
+                </ul>
+                <div class="text-center">
+                  <a href="/tables"
+                    ><button class="btn btn-lg ">
+                      <span class="fa fa-list-alt"></span> Send Mail
+                    </button></a
+                  >
+                  <a href="/tables"
+                    ><button class="btn btn-lg ">
+                      <span class="fa fa-list-alt"></span> Send Text Message
+                    </button></a
+                  >
+                </div>
+              </div>
+            </div>
             <div class="card-body">
               <ul id="waitList" class="list-group"></ul>
             </div>
